# cc-director

./: .gitignore  CLAUDE.md  CodingStyle.md  HANDOVER.md  IMPLEMENTATION.md  LICENSE  README.md  RELEASE_NOTES.md  STATUS.md  _release1.bat  _release2.bat  _run.bat  _setup.bat  build-release.bat  cc-director-crossplatform.sln  cc-director.sln  cc_director.sln  release.bat  run.bat  start.bat  take_screenshot.ps1
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
archived/CcDirector.CommunicationManager/: CcDirector.CommunicationManager.csproj  CommunicationManagerView.xaml
archived/CcDirector.Wpf/: AccountsDialog.xaml  AccountsDialog.xaml.cs  AgentTemplatesDialog.xaml.cs  App.xaml  ClaudeConfigDialog.xaml  ClaudeConfigDialog.xaml.cs  ClaudeViewDialog.xaml  CloseDialog.xaml.cs  HelpDialog.xaml.cs  McpServersDialog.xaml  MemoryDialog.xaml  NewSessionDialog.xaml  OutputStyleDialog.xaml.cs  RelinkSessionDialog.xaml  RepositoryManagerDialog.xaml  ResumeDialog.xaml.cs  StatsDialog.xaml  (+21 more)
docs/: CC_DIRECTOR_PITCH.md  CC_Director_WPF_Design_Spec.md  CC_Gateway_Design.md  CC_TOOLS.md  CODE_REVIEW_GUIDE.md  CcDirector.Engine-Design.md  CodingStyle.md  Engine-Handover.md  Gateway_Dashboard.md  HowTerminalsWork.md  LINKEDIN_CONTACT_ENRICHMENT_PLAN.md  Release-Process.md  Teams_Bot_Setup.md  UI-Product-Improvements.md  VisualStyle.md  WorkflowRecorder.md  architecture-diagram.html  audit-session-modes.md  avalonia-migration-tracker.md  claude-code-command-line.md  cli-reference.md  handover-comm-dispatch.md  handover-multi-platform-dispatch.md  plan-github-actions-mac.md  releasing.md  tool-test-tracker.md  transcript-playwright-cli.md  win11-console-issue.md
local_builds/: _local_build1.bat  _local_build2.bat  _local_build3.bat  _local_build4.bat  _local_build_avalonia.bat  _local_build_avalonia1.bat  _local_build_avalonia2.bat  _local_build_avalonia3.bat  _local_build_avalonia4.bat
releases/: _release1.bat  _release2.bat
scheduler/: README.md  build.ps1  cc-director-service.spec  deploy.bat  main.py  requirements.txt  setup.py
scripts/: _inspect_grow.js  backup-before-migration.py  build-all-tools.ps1  build-tools.bat  enrich-contacts.py  find-cc-underscores.ps1  install-tools.bat  linkedin-auto-connect.py  local-build-avalonia.ps1  local-build.ps1  migrate-storage.py  new-release.ps1  release.ps1  step1-backup.bat  step2-migrate.bat
tools/: registry.json
tools/cc-facebook/: build.ps1  cc-facebook.spec  main.py  pyproject.toml  requirements.txt
tools/cc-facebook/src/: __init__.py  __main__.py  auth.py  cli.py  facebook_api.py
tools/cc-powerpoint/: README.md  build.ps1  cc-powerpoint.spec  pyproject.toml
tools/cc-powerpoint/samples/: quarterly-report.md
tools/cc-powerpoint/src/: __init__.py  cli.py  md_converter.py  pptx_generator.py
tools/cc-powerpoint/src/themes/: __init__.py
tools/cc-powerpoint/tests/: test_md_converter.py
tools/cc-settings/: build.ps1  cc-settings.spec  main.py  pyproject.toml
tools/cc-settings/src/: __init__.py  cli.py  settings.py
tools/cc-settings/tests/: test_settings.py
tools/cc-twitter/: build.ps1  cc-twitter.spec  main.py  pyproject.toml  requirements.txt
tools/cc-twitter/src/: __init__.py  __main__.py  auth.py  cli.py  twitter_api.py
(+1059 files in other folders)
