[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-facebook"
version = "0.1.0"
description = "Facebook Page CLI: manage posts, comments, and page info via Graph API"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "CC Director Contributors"}]
requires-python = ">=3.11"
keywords = ["facebook", "page", "cli", "graph-api", "social-media"]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pyinstaller>=6.0.0"]

[project.scripts]
cc-facebook = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
